Wygląd elementu pokoju

--- a/ProHotel/Pages/Index.razor
+++ b/ProHotel/Pages/Index.razor
@@ -3,10 +3,10 @@
 <PageTitle>ProHotel</PageTitle>
 
 <div class="row">
-	<div class="col-md-4" style="margin: 2%; width: 11%">
+	<div class="col-md-4" style="margin: 2% 2% 0 5%;width: 12%">
 		<SearchField OnSearchClicked="data => GetSearchResult(data)"/>
 	</div>
-	<div class="col-md-8">
+	<div class="col-md-8" style="margin-left: 5%">
 		<SearchResult Random="true" SearchField="searchRoomJSON"/>
 	</div>
 </div>
