--- a/ProHotel/Shared/SearchField.razor
+++ b/ProHotel/Shared/SearchField.razor
@@ -42,55 +42,55 @@
 	<input @bind="areaTo" id="areaTo" type="number" class="input-number">
 	<br/>
 	<label>Balkon:</label>
-	<input @bind="balcony" type="checkbox">
+	<input @bind="balcony" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Łazienka:</label>
-	<input @bind="bath" type="checkbox">
+	<input @bind="bath" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Herbata:</label>
-	<input @bind="tea" type="checkbox">
+	<input @bind="tea" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Kawa:</label>
-	<input @bind="coffee" type="checkbox">
+	<input @bind="coffee" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Gabinet:</label>
-	<input @bind="desk" type="checkbox">
+	<input @bind="desk" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Niepełnosprawni:</label>
-	<input @bind="disabled_accessible" type="checkbox">
+	<input @bind="disabled_accessible" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Lodówka:</label>
-	<input @bind="fridge" type="checkbox">
+	<input @bind="fridge" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Żelazko:</label>
-	<input @bind="iron" type="checkbox">
+	<input @bind="iron" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Dzieci:</label>
-	<input @bind="kids_beds" type="checkbox">
+	<input @bind="kids_beds" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Kuchnia:</label>
-	<input @bind="kitchen" type="checkbox">
+	<input @bind="kitchen" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Pranie:</label>
-	<input @bind="laundry" type="checkbox">
+	<input @bind="laundry" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Sejf:</label>
-	<input @bind="safe" type="checkbox">
+	<input @bind="safe" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Zwiedzanie:</label>
-	<input @bind="sightseeing" type="checkbox">
+	<input @bind="sightseeing" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Kanapa:</label>
-	<input @bind="sofa" type="checkbox">
+	<input @bind="sofa" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Toaleta:</label>
-	<input @bind="toilet" type="checkbox">
+	<input @bind="toilet" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Telewizor:</label>
-	<input @bind="tv" type="checkbox">
+	<input @bind="tv" type="checkbox" class="input-checkbox">
 	<br/>
 	<label>Pralka:</label>
-	<input @bind="washing_mashine" type="checkbox">
+	<input @bind="washing_mashine" type="checkbox" class="input-checkbox">
 	<br/>
 	<br/>
 	<button class="input-button" onclick="@onSearch">SZUKAJ</button>
