--- a/ProHotel/Pages/RoomView.razor
+++ b/ProHotel/Pages/RoomView.razor
@@ -14,8 +14,8 @@
 		<div class="room-options-background col-md-3">
 			<div class="room-options">
 				<h2 style="text-align: center">Cena za dzień: @_room.PricePerDay pln</h2>
-				<li>Powierzchnia: @_room.Space m2</li>
-				<li>Wariant: @_room.Variant</li><br/>
+				<li>Powierzchnia: @_room.Space m<sup>2</sup></li>
+				<p>Wariant: @_room.Variant</p>
 				<li>Ilość łóżek dla dorosłych: @_room.Beds</li>
 				<li class="OptionEntryList">w tym:</li>
 				<text>&emsp;Łóżka jednoosobowe: @_room.Beds1Person</text>
