--- a/ProHotel/Shared/RoomEntry.razor.css
+++ b/ProHotel/Shared/RoomEntry.razor.css
@@ -1,19 +1,16 @@
 ﻿.room_image {
-    /*margin-right: 3%;*/
+    margin: 3%;
 }
 
 .small_info {
-    font-size: 15px;
-    margin-top: 10%;
+    font-size: 20px;
+    margin: 5%;
     text-align: left;
+    list-style: circle;
 }
 
 .addons_list {
     list-style: none;
-}
-
-.small-info-element {
-    padding: 0px 0px 0px 0px;
 }
 
 ul#addons_list {
@@ -22,12 +19,8 @@ ul#addons_list {
     padding-top: 20px;
 }
 
-    ul#addons_list li {
-        display: inline;
-    }
-
-.room-variant {
-    text-align: right;
+ul#addons_list li {
+    display: inline;
 }
 
 .main_table {
@@ -42,6 +35,6 @@ ul#addons_list {
 }
 
 .room-title {
-    font-size: 40px;
-    color: #494949;
+    font-size: 28px;
+    color: #1b1b1b;
 }
