--- a/ProHotel/Shared/RoomEntry.razor
+++ b/ProHotel/Shared/RoomEntry.razor
@@ -2,7 +2,7 @@
 @inject RoomEntryService RoomEntryService
 @inject NavigationManager NavigationManager
 
-<div class="container main_table" style="cursor: pointer; background-color: #808080" onclick="@LoadRoom">
+<div class="container main_table" style="cursor: pointer; border-radius: 5%; background-color: #808080" onclick="@LoadRoom">
 	<div class="row align-items-center">
 		<div class="col-md-4 room_image">
 			<img src="data:image/png;base64,@room.ImageUrl" class="img-fluid" alt="Room image not found">
