--- a/ProHotel/Shared/RoomEntry.razor
+++ b/ProHotel/Shared/RoomEntry.razor
@@ -5,7 +5,7 @@
 <div class="container main_table" style="cursor: pointer; background-color: #808080" onclick="@LoadRoom">
 	<div class="row align-items-center">
 		<div class="col-md-4 room_image">
-			<img src="data:image/png;base64,@room.ImageUrl" class="img-fluid" alt="Room image not found">
+			<img src="data:image/png;base64,@room.ImageUrl[0]" class="img-fluid" alt="Room image not found">
 		</div>
 		<div class="col-md-3">
 			<b class="room-title">Pokój numer @room.RoomNumber</b>
