--- a/ProHotel/wwwroot/css/site.css
+++ b/ProHotel/wwwroot/css/site.css
@@ -219,6 +219,14 @@ ul {
     color: #1b1b1b;
     text-align: left;
     font-size: 18px;
-    margin: 7%;
-    margin-left: 14%;
+    margin: 7% 7% 7% 14%;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    margin: 2%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
